# cybersecurity-projects

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
01-beginner/01-caesar-vigenere/: README.md  pyproject.toml  requirements.txt
01-beginner/01-caesar-vigenere/docs/: architecture.md  threat-model.md
01-beginner/01-caesar-vigenere/tests/: test_cli.py  test_core.py
01-beginner/02-file-hash-calculator/: README.md  pyproject.toml  requirements.txt
01-beginner/02-file-hash-calculator/docs/: architecture.md  threat-model.md
01-beginner/02-file-hash-calculator/tests/: test_cli.py  test_core.py
01-beginner/04-password-strength-analyzer/: README.md  pyproject.toml  requirements.txt
01-beginner/04-password-strength-analyzer/docs/: architecture.md  threat-model.md
01-beginner/04-password-strength-analyzer/tests/: test_cli.py  test_core.py
01-beginner/05-secure-password-generator/: README.md  pyproject.toml
01-beginner/05-secure-password-generator/docs/: architecture.md  threat-model.md
01-beginner/05-secure-password-generator/tests/: test_cli.py  test_core.py
01-beginner/06-diceware-passphrase-generator/: README.md  pyproject.toml
01-beginner/06-diceware-passphrase-generator/docs/: architecture.md  threat-model.md
01-beginner/06-diceware-passphrase-generator/tests/: test_cli.py  test_core.py
01-beginner/07-hibp-client/: README.md  pyproject.toml  requirements.txt
01-beginner/07-hibp-client/docs/: architecture.md  threat-model.md
01-beginner/07-hibp-client/tests/: test_cli.py  test_core.py
01-beginner/08-aes-gcm-file-encryptor/: .gitignore  README.md  pyproject.toml
01-beginner/08-aes-gcm-file-encryptor/docs/: architecture.md  threat-model.md
01-beginner/08-aes-gcm-file-encryptor/tests/: test_cli.py  test_core.py
01-beginner/09-rsa-key-signer/: .gitignore  README.md  pyproject.toml
01-beginner/09-rsa-key-signer/docs/: architecture.md  threat-model.md
01-beginner/09-rsa-key-signer/tests/: test_cli.py  test_core.py
01-beginner/10-certificate-inspector/: .gitignore  README.md  pyproject.toml  requirements.txt
01-beginner/10-certificate-inspector/docs/: architecture.md  threat-model.md
01-beginner/10-certificate-inspector/tests/: test_cli.py  test_core.py
01-beginner/11-totp-hotp-authenticator/: README.md  pyproject.toml  requirements.txt
01-beginner/11-totp-hotp-authenticator/docs/: architecture.md  threat-model.md
01-beginner/11-totp-hotp-authenticator/tests/: test_cli.py  test_core.py
01-beginner/12-qr-totp-provisioner/: .gitignore  README.md  pyproject.toml  requirements.txt
01-beginner/12-qr-totp-provisioner/docs/: architecture.md  threat-model.md
01-beginner/12-qr-totp-provisioner/tests/: test_cli.py  test_core.py
01-beginner/13-hmac-authenticator/: README.md  pyproject.toml
01-beginner/13-hmac-authenticator/docs/: architecture.md  threat-model.md
01-beginner/13-hmac-authenticator/tests/: test_cli.py  test_core.py
01-beginner/14-password-hasher/: .gitignore  README.md  pyproject.toml  requirements.txt
01-beginner/14-password-hasher/docs/: architecture.md  threat-model.md
01-beginner/14-password-hasher/tests/: test_cli.py  test_core.py
01-beginner/15-secure-token-generator/: README.md  pyproject.toml  requirements.txt
01-beginner/15-secure-token-generator/docs/: architecture.md  threat-model.md
01-beginner/15-secure-token-generator/tests/: test_cli.py  test_core.py
01-beginner/16-encoding-toolkit/: README.md  pyproject.toml
01-beginner/16-encoding-toolkit/docs/: architecture.md  threat-model.md
01-beginner/16-encoding-toolkit/tests/: test_cli.py  test_core.py
01-beginner/17-tls-handshake-inspector/: README.md  pyproject.toml  requirements.txt
01-beginner/17-tls-handshake-inspector/docs/: architecture.md  threat-model.md
01-beginner/17-tls-handshake-inspector/tests/: test_cli.py  test_core.py
01-beginner/18-dns-lookup-tool/: README.md  pyproject.toml  requirements.txt
01-beginner/18-dns-lookup-tool/docs/: architecture.md  threat-model.md
01-beginner/18-dns-lookup-tool/tests/: test_cli.py  test_core.py
01-beginner/19-ip-geolocation/: .gitignore  README.md  pyproject.toml  requirements.txt
01-beginner/19-ip-geolocation/docs/: architecture.md  threat-model.md
01-beginner/19-ip-geolocation/tests/: test_cli.py  test_core.py
01-beginner/20-whois-lookup/: README.md  pyproject.toml  requirements.txt
01-beginner/20-whois-lookup/docs/: architecture.md  threat-model.md
01-beginner/20-whois-lookup/tests/: test_cli.py  test_core.py
01-beginner/31-listening-port-auditor/: README.md  pyproject.toml  requirements.txt
01-beginner/31-listening-port-auditor/docs/: architecture.md  threat-model.md
01-beginner/31-listening-port-auditor/tests/: test_cli.py  test_core.py
01-beginner/32-hosts-file-tamper-detector/: .gitignore  README.md  pyproject.toml
01-beginner/32-hosts-file-tamper-detector/docs/: architecture.md  threat-model.md
01-beginner/32-hosts-file-tamper-detector/tests/: test_cli.py  test_core.py
01-beginner/33-browser-history-cleaner/: .gitignore  README.md  pyproject.toml
01-beginner/33-browser-history-cleaner/docs/: architecture.md  threat-model.md
01-beginner/33-browser-history-cleaner/tests/: test_cli.py  test_core.py
01-beginner/34-encrypted-notes/: .gitignore  README.md  pyproject.toml
01-beginner/34-encrypted-notes/docs/: architecture.md  threat-model.md
01-beginner/34-encrypted-notes/tests/: test_cli.py  test_core.py
01-beginner/35-encrypted-backup/: .gitignore  README.md  pyproject.toml  requirements.txt
02-intermediate/36-password-vault/: README.md  pyproject.toml
02-intermediate/37-jwt-validator/: README.md  pyproject.toml  requirements.txt
02-intermediate/38-oauth2-pkce-client/: README.md  pyproject.toml  requirements.txt
02-intermediate/39-rbac-engine/: README.md  pyproject.toml  requirements.txt
02-intermediate/40-abac-engine/: README.md  pyproject.toml
02-intermediate/41-session-manager/: README.md  pyproject.toml  requirements.txt
(+726 files in other folders)
