[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-02-file-hash-calculator"
version = "0.1.0"
description = "File Hash Calculator — detect file tampering via cryptographic digests"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
file-hash = "project_02.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
