[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-05-secure-password-generator"
version = "0.1.0"
description = "Secure Password Generator — cryptographically random passwords via OS CSPRNG"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
password-gen = "project_05.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
