[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-09-rsa-key-signer"
version = "0.1.0"
description = "RSA Key Pair Generator & File Signer — digital signatures for provenance"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.scripts]
rsa-sign = "project_09.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
