[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-10-certificate-inspector"
version = "0.1.0"
description = "X.509 Certificate Inspector — detect expired, weak, or misconfigured certificates"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]

[project.scripts]
cert-inspect = "project_10.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = ["integration: marks tests requiring network access"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
