[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_13"
version = "0.1.0"
description = "HMAC Message Authenticator — sign and verify with HMAC-SHA256/512"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hmac-auth = "project_13.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
