[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_14"
version = "0.1.0"
description = "Argon2id/PBKDF2 Password Hasher — secure password storage primitives"
requires-python = ">=3.11"
dependencies = ["argon2-cffi>=23.1"]

[project.scripts]
passwd-hash = "project_14.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
