[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_15"
version = "0.1.0"
description = "Secure Token Generator — CSPRNG-backed token and secret generation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sectoken = "project_15.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
