[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_17"
version = "0.1.0"
description = "TLS Handshake Inspector — inspect TLS configuration and certificate details"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tls-inspect = "project_17.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
