[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_18"
version = "0.1.0"
description = "DNS Lookup & Reverse DNS Tool — query DNS records and reverse-resolve IPs"
requires-python = ">=3.11"
dependencies = ["dnspython>=2.6"]

[project.scripts]
dns-lookup = "project_18.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
