[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_19"
version = "0.1.0"
description = "IP Geolocation & ASN Lookup — geolocate IPs and identify network ownership"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.scripts]
ip-geo = "project_19.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
