[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_35"
version = "0.1.0"
description = "Encrypted Backup Tool — AES-256-GCM compressed backup with Argon2id"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41",
    "argon2-cffi>=23",
]

[project.scripts]
enc-backup = "project_35.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
