[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_36"
version = "0.1.0"
description = "Personal Password Vault — AES-256-GCM encrypted local password manager"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41",
    "argon2-cffi>=23",
]

[project.scripts]
vault = "project_36.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
