[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_38"
version = "0.1.0"
description = "OAuth2 PKCE Client — RFC 7636 Proof Key for Code Exchange implementation"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
]

[project.scripts]
pkce-client = "project_38.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
