[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_41"
version = "0.1.0"
description = "Session Manager Service — secure session lifecycle with rotation, CSRF, and revocation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
session-mgr = "project_41.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
